--- a/.github/workflows/publish_to_test_pypi.yml
+++ b/.github/workflows/publish_to_test_pypi.yml
@@ -18,7 +18,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@test_release
+      - uses: actions/checkout@master
+        with:
+          ref: 'test_release'
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
