--- a/.github/workflows/publish_to_test_pypi.yml
+++ b/.github/workflows/publish_to_test_pypi.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/checkout@master
         with:
           ref: 'test_release'
+          fetch-depth: 0
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
