initial reeb class

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [build]
 requires = ["numpy",
             "networkx",
+            "matplotlib",
             ]
 
 [project]
-name = "ceREEBerus"
+name = "cereeberus"
 version = "0.0.5"
 authors = [
   { name="Danielle Barnes", email="barnesd8@msu.edu" },
@@ -18,10 +19,10 @@ classifiers = [
 ]
 
 [tool.setuptools.packages.find]
-where = ["ceREEBerus"]
+where = ["cereeberus"]
 
 [tool.setuptools.package-data]
-ceREEBerus = ["data"]
+cereeberus = ["data"]
 
 [project.urls]
 repository = "https://github.com/MunchLab/ceREEBerus"
