--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,4 @@
 [build]
-requires = ["numpy",
-            "networkx",
-            "matplotlib",
-            ]
 
 [project]
 name = "cereeberus"
@@ -17,6 +13,10 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
 ]
+dependencies = ["numpy",
+            "networkx",
+            "matplotlib",
+            ]
 
 [tool.setuptools.packages.find]
 where = ["cereeberus"]
