finished up/down degree function along with custom graph function to allow loops

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
 dependencies = ["numpy",
             "networkx",
             "matplotlib",
+            "scipy",
             ]
 
 [tool.setuptools.packages.find]
