--- a/.github/workflows/publish_to_test_pypi.yml
+++ b/.github/workflows/publish_to_test_pypi.yml
@@ -30,9 +30,11 @@ jobs:
           pip install
           build
           --user
-      - name: Run tests
+      - name: Install cereeberus
         run: >-
           pip install .
+        - name: Run tests
+        run: >-
           make tests
       - name: Build a binary wheel and a source tarball
         run: >-
