--- a/.github/workflows/publish_to_test_pypi.yml
+++ b/.github/workflows/publish_to_test_pypi.yml
@@ -30,6 +30,8 @@ jobs:
           pip install
           build
           --user
+      - name: Run unit tests
+         run: make tests
       - name: Build a binary wheel and a source tarball
         run: >-
           python -m
