--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -29,6 +29,8 @@ jobs:
           pip install
           build
           --user
+      - name: Install package for testing
+        run: pip install .
       - name: Run tests
         run: make tests
       - name: Build a binary wheel and a source tarball
