updated matplotlib issue still happening

--- a/.github/workflows/publish_to_test_pypi.yml
+++ b/.github/workflows/publish_to_test_pypi.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build-n-publish:
     name: Build and publish python distributions to TestPyPI
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     concurrency: release
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
