Fixed documentaiton; Added pandas to pyproject to get it to push to pypi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
 dependencies = ["numpy",
             "networkx",
             "matplotlib",
+            "pandas"
             ]
 
 [tool.setuptools.packages.find]
