--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ dmypy.json
 
 # Liz's specific sandbox jupyter notebook that probably shouldn't be on the website.
 doc_source/notebooks/sandbox_liz.ipynb
+model.lp
