--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = ["numpy",
             "networkx",
             "matplotlib",
             "pandas",
-            "scipy"
+            "scipy", 
+            "pulp"
             ]
 
 [tool.setuptools.packages.find]
