Adding Reeb graph computation stuff

--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.conda*
 
 # Spyder project settings
 .spyderproject
@@ -131,6 +132,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Vscode settings
+.vscode/
 
 # Liz's specific sandbox jupyter notebook that probably shouldn't be on the website.
 doc_source/notebooks/sandbox_liz.ipynb
