--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -20,6 +20,11 @@ jobs:
         with:
           python-version: "3.9"
 
+      - name: Install Pandoc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
