--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -5,22 +5,22 @@ on:
     branches: ["master"]
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
-  deploy-docs:
-    name: Build and deploy documentation to gh-pages
+  docs:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
 
-      - name: Install Pandoc
+      - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y pandoc
@@ -32,18 +32,12 @@ jobs:
           pip install sphinx sphinx-rtd-theme myst-parser nbsphinx matplotlib
 
       - name: Build documentation
-        run: |
-          rm -rf docs
-          mkdir -p docs
-          sphinx-build -M html doc_source docs
-          rsync -a docs/html/ docs/
-          rm -rf docs/html
-          touch docs/.nojekyll
+        run: make html
 
       - name: Deploy to GitHub Pages
+        if: github.event_name == 'push'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs
-          publish_branch: gh-pages
           force_orphan: true
