More action cleanup

--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -32,7 +32,7 @@ jobs:
           pip install sphinx sphinx-rtd-theme myst-parser nbsphinx matplotlib
 
       - name: Build documentation
-        run: make html
+        run: make docs
 
       - name: Deploy to GitHub Pages
         if: github.event_name == 'push'
