--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -4,10 +4,10 @@
 name: Python package
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+
+  workflow_dispatch:
 
 jobs:
   build:
